# RecToForm-backend

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
contexts/: api.md  llm.md  services.md  tmp.md
docs/: 01-业务与功能.md  02-架构分层与技术栈.md  03-整体流程编排（Workflow）.md  04-提示词规范.md  README.md  api层验收文档.md  docker启动.md  llm层验收文档.md  services层验收文档.md  前端设计初步.md
src/api/: app.py  dependencies.py
src/api/routes/: __init__.py  exports.py  fields.py  tasks.py  templates.py
src/api/schemas/: __init__.py  common.py  export.py  field.py  task.py  template.py
src/api/services/: __init__.py  queue.py  (+4 more)
src/core/: config.py
src/services/: __init__.py
template/: asset_import_v1.json  finance_invoice_v1.json  index.json  standard_fields.json
template/assets/: asset_import_template_v1.xlsx  finance_invoice_template_v1.xlsx
tests/: README.md  __init__.py  ofd_parser.py  resOCR_to_json_withLLM.py  test_llm_architecture.py  test_llm_service.py  test_paddleOCR.py  test_paddleOCR_SSPU.py
tests/scripts/: ofd_parser.py  run_llm_factory.py  run_llm_service.py  run_paddleOCR.py  run_paddleOCR_SSPU.py  run_qwen3_vl_8b.py  run_workflow.py
tests/unit/: test_api_app.py  test_api_exports_route.py  test_api_result_builder.py  test_api_task_dispatcher.py  test_api_tasks_route.py  test_batch_workflow_service.py  test_document_service.py  test_excel_service.py  test_llm_architecture.py  test_llm_service.py  test_output_cleanup_service.py  test_standard_schema_service.py  test_template_service.py  test_workflow_service.py
(+46 files in other folders)
